--- a/src/partials/subscription.html
+++ b/src/partials/subscription.html
@@ -1,53 +1,2 @@
-<h2>Newsletter</h2>
-<p class="title-modal text">
-    Every week we will send you new designs and information about sales.
-  </p>
 
-<form class="form-modal" name="Modal contacts">
-    <div class="label-container">
-      <label class="modal-label" for="user-name"> Name</label>
-
-      <div class="modal-contact-input">
-        <input
-          class="modal-contact"
-          type="text"
-          name="user-name"
-          autofocus
-          id="user-name"
-        />
-        
-      </div>
-    </div>
-
-    <div class="label-container">
-      <label class="modal-label" for="email-modal"> Email</label>
-
-        <input
-          class="modal-contact"
-          type="email"
-          name="email-modal"
-          id="email-modal"
-        />
-
-    </div>
-
-    <div class="checkbox-container">
-      <input
-        class="agree-click visually-hidden"
-        type="checkbox"
-        name="user-privacy"
-        value="true"
-        id="user-privacy"
-      />
-      <label class="modal-label-checkbox" for="user-privacy">
-        <span class="checkbox">
-          <svg class="icons" width="10" height="8">
-            <use href="./"></use>
-          </svg>
-        </span>
-        Agree to subscribe to the newsletter
-      </label>
-    </div>
-
-    <button class="modal-btn" type="submit">Send</button>
-  </form>
+  <img src="/img/subscription/subscription_desktop.png" alt="product" />
