--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -33,3 +33,11 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+:root {
+  --blue: rgba(10, 34, 74, 1);
+  --darkgrey: rgba(122, 122, 122, 1);
+  --grey: rgba(217, 217, 217, 1);
+  --lightblue: rgba(247, 250, 255, 1);
+  --white: rgba(255, 255, 255, 1);
+}
