--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,91 @@
-<footer>
-  <div></div>
+<footer class="footer">
+  <div class="container footer-container">
+    <div class="footer-wrapper">
+      <div class="footer-contacts-wrap">
+        <a href="./index.html" class="footer-logo">
+          <svg class="footer-logo-icon" width="100" height="16">
+            <use href="./img/svg/svg-sprite.svg#icon-logo"></use>
+          </svg>
+        </a>
+        <nav class="footer-navigation">
+          <ul class="footer-nav-list list">
+            <li class="footer-nav-item">
+              <a href="" class="footer-nav-link link">About us</a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="" class="footer-nav-link link">Our products</a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="" class="footer-nav-link link">Prices</a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="" class="footer-nav-link link">Bestsellers</a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="" class="footer-nav-link link">Reviews</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="footer-address">
+          <ul class="footer-address-list list">
+            <li class="footer-address-item">
+              <span class="footer-address-physical"
+                >Obolonsky Prospect, 14, Kyiv</span
+              >
+              <br />
+              Daily 10:00-21:00 <br />
+            </li>
+            <li class="footer-address-item">
+              <ul class="footer-inner-list">
+                <li class="footer-inner">
+                  <a href="+380669384758" class="footer-address-link link"></a
+                  >+380669384758
+                </li>
+                <li class="footer-inner">
+                  <a href="+380679384758" class="footer-address-link link"></a
+                  >+380679384758
+                </li>
+              </ul>
+            </li>
+            <li class="footer-address-item footer-address-mail">
+              <a
+                href="mailto:minimal.furniture@gmail.com"
+                class="footer-address-link link"
+                >minimal.furniture@gmail.com</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
+      <ul class="footer-social-list list">
+        <li class="footer-socials-item">
+          <a href="" class="footer-socials-link">
+            <svg class="footer-socials-icon" width="28" height="28">
+              <use href="./img/svg/svg-sprite.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-socials-item">
+          <a href="" class="footer-socials-link">
+            <svg class="footer-socials-icon" width="28" height="28">
+              <use href="./img/svg/svg-sprite.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-socials-item">
+          <a href="" class="footer-socials-link">
+            <svg class="footer-socials-icon" width="28" height="28">
+              <use href="./img/svg/svg-sprite.svg#icon-youtube"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <p class="footer-terms">
+      By using this website, you agree to the
+      <a href="" class="footer-terms-link">Terms of Service</a> and
+      <a href="" class="footer-terms-link"> Privacy Policy </a>
+    </p>
+  </div>
 </footer>
