--- a/src/partials/subscription.html
+++ b/src/partials/subscription.html
@@ -1,2 +1,2 @@
 
-  <img src="/img/subscription/subscription_desktop.png" alt="product" />
+  <!-- <img src="/img/subscription/subscription_desktop.png" alt="product" /> -->
