--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,10 +1,10 @@
 <footer class="footer">
-  <div class="container footer-container">
+  <div class="container-f footer-container">
     <div class="footer-wrapper">
       <div class="footer-contacts-wrap">
         <a href="./index.html" class="footer-logo">
           <svg class="footer-logo-icon" width="100" height="16">
-            <use href="./img/svg/svg-sprite.svg#icon-logo"></use>
+            <use href="./img/footer/svg-sprite.svg#icon-logo"></use>
           </svg>
         </a>
         <nav class="footer-navigation">
@@ -61,21 +61,21 @@
         <li class="footer-socials-item">
           <a href="" class="footer-socials-link">
             <svg class="footer-socials-icon" width="28" height="28">
-              <use href="./img/svg/svg-sprite.svg#icon-facebook"></use>
+              <use href="./img/footer/svg-sprite.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
         <li class="footer-socials-item">
           <a href="" class="footer-socials-link">
             <svg class="footer-socials-icon" width="28" height="28">
-              <use href="./img/svg/svg-sprite.svg#icon-instagram"></use>
+              <use href="./img/footer/svg-sprite.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="footer-socials-item">
           <a href="" class="footer-socials-link">
             <svg class="footer-socials-icon" width="28" height="28">
-              <use href="./img/svg/svg-sprite.svg#icon-youtube"></use>
+              <use href="./img/footer/svg-sprite.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
