--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -1,36 +1,36 @@
-<!-- <section class="price">
-    <ul>
-        <li class="price-li">
-            
-                <ul class="price-ul-two">
-                    <li><p class="ul-li-name"></p></li>
-                    <li><p class="ul-li-money">from 200$</p></li>
-                </ul>
-            
-        </li>
-        <li class="price-li">
-            
-                <ul class="price-ul-two">
-                    <li><p class="ul-li-name"></p></li>
-                    <li><p class="ul-li-money">from 200$</p></li>
-                </ul>
-            
-        </li>
-        <li class="price-li">
-            
-                <ul class="price-ul-two">
-                    <li><p class="ul-li-name"></p></li>
-                    <li><p class="ul-li-money">from 200$</p></li>
-                </ul>
-            
-        </li>
-        <li class="price-li">
-            
-                <ul class="price-ul-two">
-                    <li><p class="ul-li-name"></p></li>
-                    <li><p class="ul-li-money">from 200$</p></li>
-                </ul>
-            
-        </li>
-    </ul>
-</section> -->
+<section class="price">
+  <ul class="price-ul-one">
+    <li class="price-li">
+      <a href="">
+        <ul class="price-ul-two">
+          <li><p class="ul-li-name">CHAIRS</p></li>
+          <li><p class="ul-li-money">from 200$</p></li>
+        </ul>
+      </a>
+    </li>
+    <li class="price-li">
+      <a href=""
+        ><ul class="price-ul-two">
+          <li><p class="ul-li-name">TABLETS</p></li>
+          <li><p class="ul-li-money">from 200$</p></li>
+        </ul></a
+      >
+    </li>
+    <li class="price-li">
+      <a href=""
+        ><ul class="price-ul-two">
+          <li><p class="ul-li-name">DRESSERS</p></li>
+          <li><p class="ul-li-money">from 200$</p></li>
+        </ul></a
+      >
+    </li>
+    <li class="price-li price-li-li">
+      <a href=""
+        ><ul class="price-ul-two">
+          <li><p class="ul-li-name">SOFAS</p></li>
+          <li><p class="ul-li-money">from 200$</p></li>
+        </ul></a
+      >
+    </li>
+  </ul>
+</section>
