--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="container-f footer-container">
+  <div class="footer-container">
     <div class="footer-wrapper">
       <div class="footer-contacts-wrap">
         <a href="./index.html" class="footer-logo">
@@ -8,72 +8,97 @@
           </svg>
         </a>
         <nav class="footer-navigation">
-          <ul class="footer-nav-list list">
+          <ul class="footer-nav-list">
             <li class="footer-nav-item">
-              <a href="" class="footer-nav-link link">About us</a>
+              <a href="#about-us" class="footer-nav-link">About us</a>
             </li>
             <li class="footer-nav-item">
-              <a href="" class="footer-nav-link link">Our products</a>
+              <a href="#our-products" class="footer-nav-link">Our products</a>
             </li>
             <li class="footer-nav-item">
-              <a href="" class="footer-nav-link link">Prices</a>
+              <a href="#prices" class="footer-nav-link">Prices</a>
             </li>
             <li class="footer-nav-item">
-              <a href="" class="footer-nav-link link">Bestsellers</a>
+              <a href="#bestsellers" class="footer-nav-link">Bestsellers</a>
             </li>
             <li class="footer-nav-item">
-              <a href="" class="footer-nav-link link">Reviews</a>
+              <a href="#reviews" class="footer-nav-link">Reviews</a>
             </li>
           </ul>
         </nav>
         <address class="footer-address">
-          <ul class="footer-address-list list">
+          <ul class="footer-address-list">
             <li class="footer-address-item">
-              <span class="footer-address-physical"
-                >Obolonsky Prospect, 14, Kyiv</span
+              <a
+                href="https://www.google.com/maps/search/Obolonsky+Prospect,+14,+Kyiv/@50.4557431,30.4575503,17z/data=!3m1!4b1?entry=ttu"
+                class="footer-address-link"
+                target="_blank"
+                rel="nofollow"
               >
-              <br />
-              Daily 10:00-21:00 <br />
+                <span class="footer-address-physical"
+                  >Obolonsky Prospect, 14, Kyiv</span
+                >
+                <br />
+                Daily 10:00-21:00 <br />
+              </a>
             </li>
             <li class="footer-address-item">
               <ul class="footer-inner-list">
                 <li class="footer-inner">
-                  <a href="+380669384758" class="footer-address-link link"></a
-                  >+380669384758
+                  <a href="tel:+380669384758" class="footer-address-link"
+                    >+380669384758</a
+                  >
                 </li>
                 <li class="footer-inner">
-                  <a href="+380679384758" class="footer-address-link link"></a
-                  >+380679384758
+                  <a href="tel:+380679384758" class="footer-address-link"
+                    >+380679384758</a
+                  >
                 </li>
               </ul>
             </li>
             <li class="footer-address-item footer-address-mail">
               <a
                 href="mailto:minimal.furniture@gmail.com"
-                class="footer-address-link link"
+                class="footer-address-link"
+                target="_blank"
                 >minimal.furniture@gmail.com</a
               >
             </li>
           </ul>
         </address>
       </div>
-      <ul class="footer-social-list list">
+      <ul class="footer-social-list">
         <li class="footer-socials-item">
-          <a href="" class="footer-socials-link">
+          <a
+            href="https://www.facebook.com/"
+            class="footer-socials-link"
+            target="_blank"
+            rel="nofollow"
+          >
             <svg class="footer-socials-icon" width="28" height="28">
               <use href="./img/footer/svg-sprite.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
         <li class="footer-socials-item">
-          <a href="" class="footer-socials-link">
+          <a
+            href="https://www.instagram.com/"
+            class="footer-socials-link"
+            target="_blank"
+            rel="nofollow"
+          >
             <svg class="footer-socials-icon" width="28" height="28">
               <use href="./img/footer/svg-sprite.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="footer-socials-item">
-          <a href="" class="footer-socials-link">
+          <a
+            href="https://www.youtube.com/"
+            class="footer-socials-link"
+            target="_blank"
+            rel="nofollow"
+          >
             <svg class="footer-socials-icon" width="28" height="28">
               <use href="./img/footer/svg-sprite.svg#icon-youtube"></use>
             </svg>
@@ -84,8 +109,8 @@
 
     <p class="footer-terms">
       By using this website, you agree to the
-      <a href="" class="footer-terms-link">Terms of Service</a> and
-      <a href="" class="footer-terms-link"> Privacy Policy </a>
+      <a href="#" class="footer-terms-link">Terms of Service</a> and
+      <a href="#" class="footer-terms-link"> Privacy Policy </a>
     </p>
   </div>
 </footer>
