--- a/src/css/subscription.css
+++ b/src/css/subscription.css
@@ -1,2 +1,221 @@
-/* -------Form Modal-------- */
+/* -------Subscription Form -------- */
 
+.sub-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 375px;
+  min-width: 320px;
+  padding: 64px 16px;
+  margin: 0 auto;
+}
+.sub-container-form {
+  max-width: 343px;
+  min-width: 320px;
+  margin: 0 auto;
+}
+
+.sub-header-second {
+  display: block;
+  text-align: center;
+  color: #0a224a;
+  font-family: Roboto;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  text-transform: uppercase;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.sub-title {
+  display: block;
+  width: 343px;
+  text-align: left;
+  color: #0a224a;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  margin-bottom: 30px;
+}
+.sub-form {
+  display: flex;
+  flex-direction: column;
+  border: none;
+}
+.label-container {
+  margin-bottom: 20px;
+}
+
+.form-label {
+  display: block;
+  flex-direction: column;
+  color: #d9d9d9;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  border-color: #b6b6b6;
+}
+.form-contact {
+  display: flex;
+  padding: 11px 20px;
+  width: 343px;
+  height: 50px;
+  flex-shrink: 0;
+  color: #0a224a;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  background-color: transparent;
+  border: 1px solid #b6b6b6;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-contact::placeholder {
+  color: #d9d9d9;
+}
+.form-contact:focus {
+  border-color: #0a224a;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.checkbox-container {
+  display: inline-flex;
+  margin-bottom: 30px;
+}
+.form-label-checkbox {
+  color: #7a7a7a;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+.agree-click {
+  display: block;
+  /* padding: 8px 16px; */
+  width: 321px;
+  min-height: 26px;
+  flex-shrink: 0;
+}
+.checkbox {
+  display: inline-flex;
+  width: 25px;
+  height: 25px;
+
+  margin-right: 8px;
+  background-color: transparent;
+  fill: transparent;
+  stroke: transparent;
+  border: 1px solid #b6b6b6;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.agree-click:checked + .form-label-checkbox .checkbox {
+  background-color: #0a224a;
+  border: none;
+  stroke: #ffffff;
+}
+
+.sub-btn {
+  display: block;
+  margin-right: 129px;
+  margin-bottom: 30px;
+  min-width: 224px;
+  height: 50px;
+  color: #fff;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  cursor: pointer;
+  border: none;
+  background-color: #0a224a;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.sub-btn:hover,
+.sub-btn:focus {
+  background-color: #061835;
+}
+
+@media screen and (min-width: 768px) {
+  .sub-container {
+    max-width: 768px;
+    padding: 100px 32px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  .sub-container-form {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    flex-shrink: 0;
+    max-width: 536px;
+    margin: 0;
+  }
+  .sub-header-second {
+    text-align: left;
+  }
+  .sub-title {
+    width: 536px;
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+  .form-contact {
+    width: 536px;
+  }
+  .sub-btn {
+    margin-right: 480px;
+    margin-bottom: 64px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .sub-container {
+    max-width: 1440px;
+    padding: 100px 172px 86px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+  }
+  .sub-container-form {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-around;
+    max-width: 536px;
+    height: 410px;
+    margin-right: 100px;
+  }
+
+  .sub-btn {
+    margin-right: auto;
+    margin-bottom: 0;
+  }
+}
