--- a/src/partials/subscription.html
+++ b/src/partials/subscription.html
@@ -8,10 +8,10 @@
       </p>
 
       <form class="sub-form" name="Subscription contacts">
-        <div class="label-container">
-          <label class="form-label" for="user-name"></label>
+        <div class="sub-label-container">
+          <label class="sub-form-label" for="user-name"></label>
           <input
-            class="form-contact"
+            class="sub-form-contact"
             type="text"
             name="user-name"
             placeholder="Name"
@@ -22,11 +22,11 @@
           />
         </div>
 
-        <div class="label-container">
+        <div class="sub-label-container">
           <label class="form-label" for="email-modal"> </label>
 
           <input
-            class="form-contact"
+            class="sub-form-contact"
             type="email"
             name="email-modal"
             placeholder="Email"
@@ -34,17 +34,17 @@
           />
         </div>
 
-        <div class="checkbox-container">
+        <div class="sub-checkbox-container">
           <input
-            class="agree-click visually-hidden"
+            class="sub-agree-click sub-visually-hidden"
             type="checkbox"
             name="user-newsletter"
             value="true"
             id="user-newsletter"
           />
-          <label class="form-label-checkbox" for="user-newsletter">
-            <span class="checkbox">
-              <svg class="icons" width="13" height="13">
+          <label class="sub-form-label-checkbox" for="user-newsletter">
+            <span class="sub-checkbox">
+              <svg class="sub-icons" width="13" height="13">
                 <use href="/img/footer/svg-sprite.svg#icon-form-check"></use>
               </svg>
             </span>
