--- a/src/partials/subscription.html
+++ b/src/partials/subscription.html
@@ -1,2 +1,91 @@
+<section class="subscription-section">
+  <div class="sub-container">
+    <div class="sub-container-form">
+      <h2 class="sub-header-second">Newsletter</h2>
 
-  <!-- <img src="/img/subscription/subscription_desktop.png" alt="product" /> -->
+      <p class="sub-title">
+        Every week we will send you new designs and information about sales.
+      </p>
+
+      <form class="sub-form" name="Subscription contacts">
+        <div class="sub-label-container">
+          <label class="sub-form-label" for="user-name"></label>
+          <input
+            class="sub-form-contact"
+            type="text"
+            name="user-name"
+            placeholder="Name"
+            minlength="2"
+            maxlength="16"
+            autofocus
+            id="user-name"
+          />
+        </div>
+
+        <div class="sub-label-container">
+          <label class="form-label" for="email-modal"> </label>
+
+          <input
+            class="sub-form-contact"
+            type="email"
+            name="email-modal"
+            placeholder="Email"
+            id="email-modal"
+          />
+        </div>
+
+        <div class="sub-checkbox-container">
+          <input
+            class="sub-agree-click sub-visually-hidden"
+            type="checkbox"
+            name="user-newsletter"
+            value="true"
+            id="user-newsletter"
+          />
+          <label class="sub-form-label-checkbox" for="user-newsletter">
+            <span class="sub-checkbox">
+              <svg class="sub-icons" width="13" height="13">
+                <use href="/img/footer/svg-sprite.svg#icon-form-check"></use>
+              </svg>
+            </span>
+            Agree to subscribe to the newsletter
+          </label>
+        </div>
+
+        <button class="sub-btn" type="submit">Send</button>
+      </form>
+    </div>
+
+    <picture>
+      <source
+        srcset="
+          /img/subscription/subscription_desktop.jpg    1x,
+          /img/subscription/subscription_desktop@2x.jpg 2x
+        "
+        media="(min-width:1440px)"
+      />
+
+      <source
+        srcset="
+          /img/subscription/subscription_tab.jpg    1x,
+          /img/subscription/subscription_tab@2x.jpg 2x
+        "
+        media="(min-width:768px)"
+      />
+
+      <source
+        srcset="
+          /img/subscription/subscription_mob.jpg    1x,
+          /img/subscription/subscription_mob@2x.jpg 2x
+        "
+        media="(min-width:320px)"
+      />
+
+      <img
+        src="../img/subscription/subscription_desktop.jpg"
+        alt="product shot sofa"
+        width="704"
+      />
+    </picture>
+  </div>
+</section>
