up price and reset

--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -1,36 +1,51 @@
-<!-- <section class="price">
-    <ul>
-        <li class="price-li">
-            
-                <ul class="price-ul-two">
-                    <li><p class="ul-li-name"></p></li>
-                    <li><p class="ul-li-money">from 200$</p></li>
-                </ul>
-            
-        </li>
-        <li class="price-li">
-            
-                <ul class="price-ul-two">
-                    <li><p class="ul-li-name"></p></li>
-                    <li><p class="ul-li-money">from 200$</p></li>
-                </ul>
-            
-        </li>
-        <li class="price-li">
-            
-                <ul class="price-ul-two">
-                    <li><p class="ul-li-name"></p></li>
-                    <li><p class="ul-li-money">from 200$</p></li>
-                </ul>
-            
-        </li>
-        <li class="price-li">
-            
-                <ul class="price-ul-two">
-                    <li><p class="ul-li-name"></p></li>
-                    <li><p class="ul-li-money">from 200$</p></li>
-                </ul>
-            
-        </li>
+<section class="price">
+  <h2 class="visually-hidden">Chairs Tables Dressers Sofas Price.</h2>
+  <div class="price-div">
+    <ul class="price-ul-one">
+      <li class="price-li">
+        <a href="" class="a-price">
+          <div class="ul-li-div">
+            <ul class="price-ul-two">
+              <li class="ul-li-name"><p class="li-name-p">CHAIRS</p></li>
+              <li class="ul-li-money"><p class="li-name-m">from 200$</p></li>
+            </ul>
+          </div>
+        </a>
+      </li>
+      <li class="price-li">
+        <a href="" class="a-price"
+          ><div class="ul-li-div">
+            <ul class="price-ul-two">
+              <li class="ul-li-name"><p class="li-name-p">TABLETS</p></li>
+              <li class="ul-li-money"><p class="li-name-m">from 250$</p></li>
+            </ul>
+          </div>
+        </a>
+      </li>
+      <li class="price-li">
+        <a href="" class="a-price"
+          ><div class="ul-li-div">
+            <ul class="price-ul-two">
+              <li class="ul-li-name">
+                <p href="" class="li-name-p">DRESSERS</p>
+              </li>
+              <li class="ul-li-money">
+                <p href="" class="li-name-m">from 300$</p>
+              </li>
+            </ul>
+          </div>
+        </a>
+      </li>
+      <li class="price-li price-li-li">
+        <a href="" class="a-price"
+          ><div class="ul-li-div">
+            <ul class="price-ul-two">
+              <li class="ul-li-name"><p class="li-name-p">SOFAS</p></li>
+              <li class="ul-li-money"><p class="li-name-m">from 500$</p></li>
+            </ul>
+          </div>
+        </a>
+      </li>
     </ul>
-</section> -->
+  </div>
+</section>
