--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -41,3 +41,15 @@ img {
   --lightblue: rgba(247, 250, 255, 1);
   --white: rgba(255, 255, 255, 1);
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
