--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -11,7 +11,7 @@
             "
             class="creviews-img"
             src="../img/reviews/Alexandra.jpg"
-            alt=""
+            alt="Alexandra dream"
           />
         </div>
         <div class="creviews-name-box">
@@ -31,7 +31,7 @@
             srcset="../img/reviews/James.jpg 1x, ../img/reviews/James-2x.jpg 2x"
             class="creviews-img"
             src="../img/reviews/James.jpg"
-            alt=""
+            alt="James Williams"
           />
         </div>
         <div class="creviews-name-box">
@@ -51,7 +51,7 @@
             srcset="../img/reviews/Emily.jpg 1x, ../img/reviews/Emily-2x.jpg 2x"
             class="creviews-img"
             src="../img/reviews/Emily.jpg"
-            alt=""
+            alt="Emily Watson"
           />
         </div>
         <div class="creviews-name-box">
