--- a/src/css/subscription.css
+++ b/src/css/subscription.css
@@ -1,221 +1,265 @@
 /* -------Subscription Form -------- */
 
 .sub-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 375px;
-    min-width: 320px;
-    padding: 64px 16px;
-    margin: 0 auto;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 375px;
+  min-width: 320px;
+  padding: 64px 16px;
+  margin: 0 auto;
+}
+.sub-container-form {
+  max-width: 343px;
+  margin: 0 auto;
+}
+
+.sub-header-second {
+  display: block;
+  text-align: center;
+  color: #0a224a;
+  font-family: Roboto;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  text-transform: uppercase;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.sub-title {
+  display: block;
+  width: 343px;
+  text-align: left;
+  color: #0a224a;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  margin-bottom: 30px;
+}
+.sub-form {
+  display: flex;
+  flex-direction: column;
+  border: none;
+}
+.sub-label-container {
+  margin-bottom: 20px;
+}
+
+.sub-form-label {
+  display: block;
+  flex-direction: column;
+  color: #d9d9d9;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  border-color: #b6b6b6;
+}
+.sub-form-contact {
+  display: flex;
+  padding: 11px 20px;
+  width: 343px;
+  height: 50px;
+  flex-shrink: 0;
+  color: #0a224a;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  background-color: transparent;
+  border: 1px solid #b6b6b6;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.sub-form-contact::placeholder {
+  color: #d9d9d9;
+}
+.sub-form-contact:hover,
+.sub-form-contact:focus {
+  border-color: #0a224a;
+}
+.sub-contact-input {
+  position: relative;
+}
+.error-icon {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  fill: transparent;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.sub-form-contact:focus:invalid {
+  color: #e74a3b;
+  border-color: #e74a3b;
+}
+.sub-form-contact:focus:invalid + .error-icon {
+  fill: #e74a3b;
+}
+.sub-visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.sub-checkbox-container {
+  display: inline-flex;
+  margin-bottom: 30px;
+}
+.sub-form-label-checkbox {
+  color: #7a7a7a;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+.sub-agree-click {
+  display: block;
+  width: 321px;
+  min-height: 26px;
+  flex-shrink: 0;
+}
+.sub-checkbox {
+  display: inline-flex;
+  width: 25px;
+  height: 25px;
+
+  margin-right: 8px;
+  background-color: transparent;
+  fill: transparent;
+  stroke: transparent;
+  border: 1px solid #b6b6b6;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.sub-agree-click:checked + .sub-form-label-checkbox .sub-checkbox {
+  background-color: #0a224a;
+  border: none;
+  stroke: #ffffff;
+}
+
+.sub-btn {
+  display: block;
+  margin-right: 129px;
+  margin-bottom: 30px;
+  min-width: 224px;
+  height: 50px;
+  color: #fff;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  cursor: pointer;
+  border: none;
+  background-color: #0a224a;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.sub-btn:hover,
+.sub-btn:focus {
+  background-color: #061835;
+}
+@media screen and (max-width: 374px) {
   .sub-container-form {
-    max-width: 343px;
-    min-width: 320px;
-    margin: 0 auto;
-  }
-  
-  .sub-header-second {
-    display: block;
-    text-align: center;
-    color: #0a224a;
-    font-family: Roboto;
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
-    text-transform: uppercase;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-  .sub-title {
-    display: block;
-    width: 343px;
-    text-align: left;
-    color: #0a224a;
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
-    margin-bottom: 30px;
+    max-width: 288px;
   }
   .sub-form {
-    display: flex;
-    flex-direction: column;
-    border: none;
+    max-width: 288px;
+    margin: 0;
   }
-  .sub-label-container {
-    margin-bottom: 20px;
-  }
-  
-  .sub-form-label {
-    display: block;
-    flex-direction: column;
-    color: #d9d9d9;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    border-color: #b6b6b6;
+  .sub-title {
+    max-width: 288px;
+    text-align: center;
   }
   .sub-form-contact {
-    display: flex;
-    padding: 11px 20px;
-    width: 343px;
-    height: 50px;
-    flex-shrink: 0;
-    color: #0a224a;
-    font-family: Roboto;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
-    background-color: transparent;
-    border: 1px solid #b6b6b6;
-    outline: transparent;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .sub-form-contact::placeholder {
-    color: #d9d9d9;
-  }
-  .sub-form-contact:focus {
-    border-color: #0a224a;
-  }
-  .sub-visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-  }
-  
-  .sub-checkbox-container {
-    display: inline-flex;
-    margin-bottom: 30px;
+    max-width: 288px;
   }
   .sub-form-label-checkbox {
-    color: #7a7a7a;
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
+    text-align: center;
   }
-  
-  .sub-agree-click {
-    display: block;
-    width: 321px;
-    min-height: 26px;
+  .sub-btn {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .sub-container {
+    max-width: 768px;
+    padding: 100px 32px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  .sub-container-form {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
     flex-shrink: 0;
+    max-width: 536px;
+    margin: 0;
   }
-  .sub-checkbox {
-    display: inline-flex;
-    width: 25px;
-    height: 25px;
-  
-    margin-right: 8px;
-    background-color: transparent;
-    fill: transparent;
-    stroke: transparent;
-    border: 1px solid #b6b6b6;
+  .sub-header-second {
+    text-align: left;
+  }
+  .sub-title {
+    width: 536px;
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+  .sub-form-contact {
+    width: 536px;
+  }
+  .sub-btn {
+    margin-right: 480px;
+    margin-bottom: 64px;
+  }
+  .sub-contact-input {
+    max-width: 536px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .sub-container {
+    max-width: 1440px;
+    padding-top: 100px;
+    padding-bottom: 86px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
     align-items: center;
     justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .sub-agree-click:checked + .sub-form-label-checkbox .sub-checkbox {
-    background-color: #0a224a;
-    border: none;
-    stroke: #ffffff;
+  .sub-container-form {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-around;
+    max-width: 536px;
+    height: 410px;
+    margin-right: 100px;
   }
-  
+
   .sub-btn {
-    display: block;
-    margin-right: 129px;
-    margin-bottom: 30px;
-    min-width: 224px;
-    height: 50px;
-    color: #fff;
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
-    cursor: pointer;
-    border: none;
-    background-color: #0a224a;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin-right: auto;
+    margin-bottom: 0;
   }
-  .sub-btn:hover,
-  .sub-btn:focus {
-    background-color: #061835;
-  }
-  
-  @media screen and (min-width: 768px) {
-    .sub-container {
-      max-width: 768px;
-      padding: 100px 32px;
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      align-items: center;
-    }
-    .sub-container-form {
-      display: flex;
-      flex-direction: column;
-      align-items: start;
-      flex-shrink: 0;
-      max-width: 536px;
-      margin: 0;
-    }
-    .sub-header-second {
-      text-align: left;
-    }
-    .sub-title {
-      width: 536px;
-      font-size: 18px;
-      margin-bottom: 20px;
-    }
-    .sub-form-contact {
-      width: 536px;
-    }
-    .sub-btn {
-      margin-right: 480px;
-      margin-bottom: 64px;
-    }
-  }
-  
-  @media screen and (min-width: 1440px) {
-    .sub-container {
-      max-width: 1440px;
-      padding: 100px 172px 86px;
-      display: flex;
-      flex-direction: row;
-      flex-wrap: nowrap;
-      align-items: center;
-    }
-    .sub-container-form {
-      display: flex;
-      flex-direction: column;
-      align-items: start;
-      justify-content: space-around;
-      max-width: 536px;
-      height: 410px;
-      margin-right: 100px;
-    }
-  
-    .sub-btn {
-      margin-right: auto;
-      margin-bottom: 0;
-    }
-  }
-  
+}
