--- a/src/partials/ourproducts.html
+++ b/src/partials/ourproducts.html
@@ -38,15 +38,15 @@
         <picture class="ourproducts-picture">
           <source
             srcset="
-              ../img/ourproducts/ourproduct-2-desk-1x.jpg 1x,
-              ../img/ourproducts/ourproduct-2-desk-2x.jpg 2x
+              /img/ourproducts/ourproduct-2-desk-1x.jpg 1x,
+              /img/ourproducts/ourproduct-2-desk-2x.jpg 2x
             "
             media="(min-width: 1440px)"
           />
           <source
             srcset="
-              ../img/ourproducts/ourproduct-2-tab-1x.jpg 1x,
-              ../img/ourproducts/ourproduct-2-tab-2x.jpg 2x
+              /img/ourproducts/ourproduct-2-tab-1x.jpg 1x,
+              /img/ourproducts/ourproduct-2-tab-2x.jpg 2x
             "
             media="(min-width: 768px)"
           />
@@ -63,8 +63,8 @@
         <picture class="ourproducts-picture">
           <source
             srcset="
-              ../img/ourproducts/ourproduct-3-desk-1x.jpg 1x,
-              ../img/ourproducts/ourproduct-3-desk-2x.jpg 2x
+              /img/ourproducts/ourproduct-3-desk-1x.jpg 1x,
+              /img/ourproducts/ourproduct-3-desk-2x.jpg 2x
             "
             media="(min-width: 1440px)"
           />
@@ -80,8 +80,8 @@
         <picture class="ourproducts-picture">
           <source
             srcset="
-              ../img/ourproducts/ourproduct-4-desk-1x.jpg 1x,
-              ../img/ourproducts/ourproduct-4-desk-2x.jpg 2x
+              /img/ourproducts/ourproduct-4-desk-1x.jpg 1x,
+              /img/ourproducts/ourproduct-4-desk-2x.jpg 2x
             "
             media="(min-width: 1440px)"
           />
