--- a/src/partials/subscription.html
+++ b/src/partials/subscription.html
@@ -22,7 +22,7 @@
               required
             />
             <svg class="error-icon" width="24" height="24">
-              <use href="../img/footer/svg-sprite.svg#icon-error"></use>
+              <use href="/img/footer/svg-sprite.svg#icon-error"></use>
             </svg>
           </div>
         </div>
@@ -40,7 +40,7 @@
               required
             />
             <svg class="error-icon" width="24" height="24">
-              <use href="../img/footer/svg-sprite.svg#icon-error"></use>
+              <use href="/img/footer/svg-sprite.svg#icon-error"></use>
             </svg>
           </div>
         </div>
