--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -6,11 +6,11 @@
         <div class="creviews-img-box">
           <img
             srcset="
-              ../img/reviews/Alexandra.jpg    1x,
-              ../img/reviews/Alexandra-2x.jpg 2x
+              /img/reviews/Alexandra.jpg    1x,
+              /img/reviews/Alexandra-2x.jpg 2x
             "
             class="creviews-img"
-            src="../img/reviews/Alexandra.jpg"
+            src="/img/reviews/Alexandra.jpg"
             alt=""
           />
         </div>
@@ -28,9 +28,9 @@
       <li class="creviews-item not">
         <div class="creviews-img-box">
           <img
-            srcset="../img/reviews/James.jpg 1x, ../img/reviews/James-2x.jpg 2x"
+            srcset="/img/reviews/James.jpg 1x, /img/reviews/James-2x.jpg 2x"
             class="creviews-img"
-            src="../img/reviews/James.jpg"
+            src="/img/reviews/James.jpg"
             alt=""
           />
         </div>
@@ -48,9 +48,9 @@
       <li class="creviews-item none">
         <div class="creviews-img-box">
           <img
-            srcset="../img/reviews/Emily.jpg 1x, ../img/reviews/Emily-2x.jpg 2x"
+            srcset="/img/reviews/Emily.jpg 1x, /img/reviews/Emily-2x.jpg 2x"
             class="creviews-img"
-            src="../img/reviews/Emily.jpg"
+            src="/img/reviews/Emily.jpg"
             alt=""
           />
         </div>
