--- a/src/partials/subscription.html
+++ b/src/partials/subscription.html
@@ -93,7 +93,7 @@
       />
 
       <img
-        src="../img/subscription/subscription_desktop.jpg"
+        src="/img/subscription/subscription_desktop.jpg"
         alt="product shot sofa"
         width="704"
       />
