--- a/src/partials/ourproducts.html
+++ b/src/partials/ourproducts.html
@@ -6,8 +6,8 @@
         <picture class="ourproducts-picture">
           <source
             srcset="
-              ./img/ourproducts/ourproduct-1-desk-1x.jpg 1x,
-              ./img/ourproducts/ourproduct-1-desk-2x.jpg 2x
+              /img/ourproducts/ourproduct-1-desk-1x.jpg 1x,
+              /img/ourproducts/ourproduct-1-desk-2x.jpg 2x
             "
             media="(min-width: 1440px)"
           />
@@ -21,13 +21,13 @@
           />
           <source
             srcset="
-              ./img/ourproducts/ourproduct-1-mob-1x.jpg 1x,
-              ./img/ourproducts/ourproduct-1-mob-2x.jpg 2x
+              /img/ourproducts/ourproduct-1-mob-1x.jpg 1x,
+              /img/ourproducts/ourproduct-1-mob-2x.jpg 2x
             "
             media="(min-width: 320px)"
           />
           <img
-            src="../img/ourproducts/ourproduct-1-desk-1x.jpg"
+            src="/img/ourproducts/ourproduct-1-desk-1x.jpg"
             alt="furniture"
             width="344"
           />
@@ -52,7 +52,7 @@
           />
 
           <img
-            src="../img/ourproducts/ourproduct-2-desk-1x.jpg"
+            src="/img/ourproducts/ourproduct-2-desk-1x.jpg"
             alt="furniture"
             width="344"
           />
@@ -69,7 +69,7 @@
             media="(min-width: 1440px)"
           />
           <img
-            src="../img/ourproducts/ourproduct-3-desk-1x.jpg"
+            src="/img/ourproducts/ourproduct-3-desk-1x.jpg"
             alt="furniture"
             width="344"
           />
@@ -86,7 +86,7 @@
             media="(min-width: 1440px)"
           />
           <img
-            src="../img/ourproducts/ourproduct-4-desk-1x.jpg"
+            src="/img/ourproducts/ourproduct-4-desk-1x.jpg"
             alt="furniture"
             width="344"
           />
