--- a/src/partials/bestsellers.html
+++ b/src/partials/bestsellers.html
@@ -104,7 +104,7 @@
           <picture>
             <source
               srcset="
-                ./img/bestsellers/bestsellers-4-desk-1x.jpg 1x,
+                /img/bestsellers/bestsellers-4-desk-1x.jpg 1x,
                 ./img/bestsellers/bestsellers-4-desk-2x.jpg 2x
               "
               media="(min-width: 1440px)"
@@ -118,7 +118,7 @@
               media="(min-width:768px)"
             />
             <img
-              src="../img/bestsellers/bestsellers-4-desk-1x.jpg"
+              src="./img/bestsellers/bestsellers-4-desk-1x.jpg"
               alt="furniture"
             />
           </picture>
