--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
     <div class="header-container">
         <a class="header-logo-link" href="./index.html" class="">
             <svg class="header-logo" width="100" height="16">
-                <use href="../img/header/svg-sprite.svg#icon-logo-header"></use>
+                <use href="/img/header/svg-sprite.svg#icon-logo"></use>
             </svg>
         </a>
         <nav class="header-nav">
