--- a/src/partials/aboutus.html
+++ b/src/partials/aboutus.html
@@ -1,4 +1,4 @@
-<section class="about_us" id="aboutus">
+<section class="about_us" id="about-us">
   <div class="about_us-container">
     <div class="about_us-wrap">
       <div class="about_us-right">
