--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" id="contacts">
   <div class="footer-container">
     <div class="footer-wrapper">
       <div class="footer-contacts-wrap">
@@ -16,7 +16,7 @@
               <a href="#our-products" class="footer-nav-link">Our products</a>
             </li>
             <li class="footer-nav-item">
-              <a href="#prices" class="footer-nav-link">Prices</a>
+              <a href="#price" class="footer-nav-link">Prices</a>
             </li>
             <li class="footer-nav-item">
               <a href="#bestsellers" class="footer-nav-link">Bestsellers</a>
