--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="creviews">
+<section class="creviews" id="reviews">
   <div class="creviews-box">
     <h2 class="creviews-title">Clients reviews</h2>
     <ul class="creviews-list">
