--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,3 +1,4 @@
+<!-- HERO -->
 <section class="hero">
     <div class="hero-container">
         <h1 class="hero-title">Modern and minimalist<br>furniture for you</h1>
