--- a/src/partials/bestsellers.html
+++ b/src/partials/bestsellers.html
@@ -1,4 +1,4 @@
-<section>
+<section id="bestsellers">
   <div class="bestsellers-main">
     <h2 class="bestsellers-title">bestsellers</h2>
     <div class="best-box">
@@ -104,7 +104,7 @@
           <picture>
             <source
               srcset="
-                /img/bestsellers/bestsellers-4-desk-1x.jpg 1x,
+                /img/bestsellers/bestsellers-4-desk-1x.jpg  1x,
                 ./img/bestsellers/bestsellers-4-desk-2x.jpg 2x
               "
               media="(min-width: 1440px)"
