--- a/src/partials/ourproducts.html
+++ b/src/partials/ourproducts.html
@@ -1,4 +1,4 @@
-<section>
+<section id="our-products">
   <div class="ourproducts-main">
     <h2 class="ourproducts-title">our products</h2>
     <ul class="ourpoducts-list list">
