--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -1,4 +1,4 @@
-<section class="price">
+<section class="price" id="prices">
   <h2 class="visually-hidden">Chairs Tables Dressers Sofas Price.</h2>
   <div class="price-div">
     <ul class="price-ul-one">
