--- a/src/partials/subscription.html
+++ b/src/partials/subscription.html
@@ -1,4 +1,4 @@
-<section class="subscription-section">
+<section class="subscription-section" id="subscription">
   <div class="sub-container">
     <div class="sub-container-form">
       <h2 class="sub-header-second">Newsletter</h2>
