--- a/src/css/price.css
+++ b/src/css/price.css
@@ -7,6 +7,7 @@
   width: calc((100% - 68px) / 1);
   margin-top: 100px;
   margin-bottom: 100px;
+  overflow: hidden;
 }
 .price-ul-two {
   display: flex;
@@ -22,13 +23,19 @@
   height: 105px;
   position: relative;
 }
-.price-li:before {
-  content: "";
+.price-li-wrap {
+  position: relative;
+}
+.price-li-wrap:before {
+  content: '';
   position: absolute;
   width: 60px;
   height: 4px;
   top: 50%;
   background-color: var(--blue);
+  border-radius: 4px;
+  transform: translateX(-100%);
+  transition: transform 250ms ease-in-out;
 }
 .price-li-li {
   border-bottom: 1px solid;
@@ -47,13 +54,15 @@
   font-size: 18px;
   font-weight: 1000;
 }
-.price-li:hover .li-name-p{
+.price-li:hover .li-name-p {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transform: translateX(80px);
 }
-
+.price-li:hover .price-li-wrap::before {
+  transform: translateX(0);
+}
 .a-price {
-    height: 105px;
+  height: 105px;
 }
 @media (max-width: 375px) {
   .price-div {
