--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -3,48 +3,56 @@
   <div class="price-div">
     <ul class="price-ul-one">
       <li class="price-li">
-        <a href="" class="a-price">
-          <div class="ul-li-div">
-            <ul class="price-ul-two">
-              <li class="ul-li-name"><p class="li-name-p">CHAIRS</p></li>
-              <li class="ul-li-money"><p class="li-name-m">from 200$</p></li>
-            </ul>
-          </div>
-        </a>
+        <div class="price-li-wrap">
+          <a href="" class="a-price">
+            <div class="ul-li-div">
+              <ul class="price-ul-two">
+                <li class="ul-li-name"><p class="li-name-p">CHAIRS</p></li>
+                <li class="ul-li-money"><p class="li-name-m">from 200$</p></li>
+              </ul>
+            </div>
+          </a>
+        </div>
       </li>
       <li class="price-li">
-        <a href="" class="a-price"
-          ><div class="ul-li-div">
-            <ul class="price-ul-two">
-              <li class="ul-li-name"><p class="li-name-p">TABLETS</p></li>
-              <li class="ul-li-money"><p class="li-name-m">from 250$</p></li>
-            </ul>
-          </div>
-        </a>
+        <div class="price-li-wrap">
+          <a href="" class="a-price"
+            ><div class="ul-li-div">
+              <ul class="price-ul-two">
+                <li class="ul-li-name"><p class="li-name-p">TABLETS</p></li>
+                <li class="ul-li-money"><p class="li-name-m">from 250$</p></li>
+              </ul>
+            </div>
+          </a>
+        </div>
       </li>
       <li class="price-li">
-        <a href="" class="a-price"
-          ><div class="ul-li-div">
-            <ul class="price-ul-two">
-              <li class="ul-li-name">
-                <p href="" class="li-name-p">DRESSERS</p>
-              </li>
-              <li class="ul-li-money">
-                <p href="" class="li-name-m">from 300$</p>
-              </li>
-            </ul>
-          </div>
-        </a>
+        <div class="price-li-wrap">
+          <a href="" class="a-price"
+            ><div class="ul-li-div">
+              <ul class="price-ul-two">
+                <li class="ul-li-name">
+                  <p href="" class="li-name-p">DRESSERS</p>
+                </li>
+                <li class="ul-li-money">
+                  <p href="" class="li-name-m">from 300$</p>
+                </li>
+              </ul>
+            </div>
+          </a>
+        </div>
       </li>
       <li class="price-li price-li-li">
-        <a href="" class="a-price"
-          ><div class="ul-li-div">
-            <ul class="price-ul-two">
-              <li class="ul-li-name"><p class="li-name-p">SOFAS</p></li>
-              <li class="ul-li-money"><p class="li-name-m">from 500$</p></li>
-            </ul>
-          </div>
-        </a>
+        <div class="price-li-wrap">
+          <a href="" class="a-price"
+            ><div class="ul-li-div">
+              <ul class="price-ul-two">
+                <li class="ul-li-name"><p class="li-name-p">SOFAS</p></li>
+                <li class="ul-li-money"><p class="li-name-m">from 500$</p></li>
+              </ul>
+            </div>
+          </a>
+        </div>
       </li>
     </ul>
   </div>
