--- a/src/css/price.css
+++ b/src/css/price.css
@@ -1,73 +1,1 @@
-.price-div {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  max-width: 1096px;
-  margin: 0 auto;
-  width: calc((100% - 68px) / 1);
-  margin-top: 100px;
-  margin-bottom: 100px;
-  overflow: hidden;
-}
-.price-ul-two {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.price-li {
-  border-top: 1px solid;
-  border-color: var(--blue);
-  border-left-color: white;
-  border-right-color: white;
-  max-width: 1096px;
-  height: 105px;
-  position: relative;
-}
-.price-li-wrap {
-  position: relative;
-}
-.price-li-wrap:before {
-  content: '';
-  position: absolute;
-  width: 60px;
-  height: 4px;
-  top: 50%;
-  background-color: var(--blue);
-  border-radius: 4px;
-  transform: translateX(-100%);
-  transition: transform 250ms ease-in-out;
-}
-.price-li-li {
-  border-bottom: 1px solid;
-}
-.ul-li-div {
-  height: 105px;
-  padding: 30px 0px;
-}
-.li-name-p {
-  font-size: 32px;
-  line-height: 1.40625em;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transform: translateX(0px);
-}
-.li-name-m {
-  font-size: 18px;
-  font-weight: 1000;
-}
-.price-li:hover .li-name-p {
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transform: translateX(80px);
-}
-.price-li:hover .price-li-wrap::before {
-  transform: translateX(0);
-}
-.a-price {
-  height: 105px;
-}
-@media (max-width: 375px) {
-  .price-div {
-    width: calc((100% - 32px) / 1);
-    margin-top: 64px;
-    margin-bottom: 64px;
-  }
-}
+[]
